# HaskellRandomDataGeneration

./: README.md  randomDataGeneration.cabal  randomValues.cabal
app/: Main.hs
