name:                randomDataGeneration
version:             0.1.0.0
synopsis:            Random Value Generation
description:         Please see README.md
homepage:            http://github.com/githubuser/randomValues#readme
author:              Julian Müller
maintainer:          jul.mue@hotmail.com
copyright:           2015 Julian Müller
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable randomValues-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , randomDataGeneration
                     , random >= 1.1
                     , MonadRandom >= 4.1
                     , QuickCheck >= 2.8.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julmue/RandomDataGeneration
